# xiaohongshu-matrices-cli

./: .gitattributes  .gitignore  AI_OPERATIONS.md  CAPABILITIES.md  DASHBOARD.md  INTERACTION_RULES.md  LICENSE  NOTICE  PLATFORMS.md  README.md  SCHEMA.md  SKILL.md  UI.md  orchestrator_goals.example.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: install.ps1  install.sh  install_camoufox_zip.py  sync-upstream.sh
tests/: test_account_bridge.py  test_anti_detection.py  test_cli.py  test_client.py  test_cookies.py  test_creator.py  test_creator_signing.py  test_dashboard_app.py  test_dashboard_collector.py  test_dashboard_db.py  test_dashboard_extension_pages.py  test_dashboard_importer.py  test_dashboard_materials.py  test_dashboard_operations.py  test_dashboard_p0.py  test_dashboard_publisher.py  test_dashboard_utils.py  test_orchestrator.py  test_qr_login.py  test_signing.py  test_smoke.py  test_topics.py
xhs_cli/: __init__.py  account_bridge.py  cli.py  client.py  client_mixins.py  command_normalizers.py  constants.py  cookies.py  creator_signing.py  formatter.py  formatter_normalizers.py  formatter_renderers.py  formatter_utils.py  note_refs.py  qr_login.py  signing.py  text_card_renderer.py  user_analyzer.py
xhs_cli/commands/: _common.py  analyze.py  auth.py  creator.py  notifications.py  reading.py  social.py
xhs_cli/dashboard/: __init__.py  __main__.py  ai.py  analytics.py  api_health.py  app.py  browser.py  collector.py  config.py  db.py  engagement.py  exporter.py  extension.py  governance.py  image_gen.py  importer.py  materials.py  migrate.py  operation_queue.py  operations.py  orchestrator.py  persistence.py  publisher.py  queue.py  rate_limit.py  research_extension.py  utils.py  vision.py
xhs_cli/dashboard/static/: style.css
xhs_cli/dashboard/templates/: accounts.html  analytics.html  api_health.html  base.html  dashboard.html  engagement.html  library.html  materials.html  personas.html  publish.html  research.html  roles.html  rules.html  searches.html
