[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xiaohongshu-matrices-cli"
version = "0.9.0"
description = "A CLI and local dashboard for Xiaohongshu search, collection, and reviewed publishing"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "jackwener" }, { name = "alanl1234" }]
maintainers = [{ name = "alanl1234" }]
keywords = ["xiaohongshu", "xhs", "redbook", "cli", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "rich>=13.0",
    "browser-cookie3>=0.19",
    "pycryptodome>=3.20",
    "xhshow>=0.1.9",
    "PyYAML>=6.0",
    "qrcode>=7.0",
    "camoufox>=0.5.3",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.11.0", "mypy>=1.15.0"]

[project.urls]
Homepage = "https://github.com/alanl1234/xiaohongshu-matrices-cli"
Repository = "https://github.com/alanl1234/xiaohongshu-matrices-cli"
Issues = "https://github.com/alanl1234/xiaohongshu-matrices-cli/issues"

[project.scripts]
xhs = "xhs_cli.cli:cli"
xhs-dashboard = "xhs_cli.dashboard.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["xhs_cli"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["vendor", ".venv", "dist", "build", ".pytest-tmp"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-m 'not smoke' --basetemp=.pytest-tmp"
markers = ["smoke: real-API integration tests (run with: pytest -m smoke)"]
[tool.uv.sources]
camoufox = { path = "vendor/camoufox-python" }
